[WN] 6.3.2代码修改以及提交